# Quiz

./: GUI.cpp  GUI.h  README.md  Reflection.md  main.cpp  meson.build  questions.txt  readFIle.h  readFile.cpp  readFile.h  tankekart.txt
subprojects/SDL2_image-2.6.2/: .meson-subproject-wrap-hash.txt
subprojects/animationwindow/: meson.build
subprojects/animationwindow/include/: AnimationWindow.h  Image.h  Widget.h
subprojects/animationwindow/include/widgets/: Button.h  CheckBox.h  DropdownList.h  RadioButton.h  Slider.h  TextBox.h  TextInput.h
subprojects/animationwindow/src/: AnimationWindow.cpp  Image.cpp
subprojects/animationwindow/src/widgets/: Button.cpp  CheckBox.cpp  DropdownList.cpp  RadioButton.cpp  Slider.cpp  TextBox.cpp  TextInput.cpp
subprojects/sdl2_mixer_windows/lib/: libSDL2_mixer.la
subprojects/sdl2_mixer_windows/lib/cmake/SDL2_mixer/: sdl2_mixer-config-version.cmake  sdl2_mixer-config.cmake
subprojects/sdl2_mixer_windows/lib/pkgconfig/: SDL2_mixer.pc
subprojects/std_lib_facilities/: meson.build
